# bash_trainer

./: .gitignore  1.txt  4.txt  CMakeCache.txt  CMakeLists.txt  README.md  docker-compose.yml  main.cpp
dockerfiles/: Dockerfile
public_html/: index.html
src/trainer1/: 2.txt  3.txt  5.txt  6.txt
